--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,25 @@
 ---
-title: Welcome to Starlight
+title: Aguado Soluciones
 description: Get started building your docs site with Starlight.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Aguado Soluciones es una plataforma web sencilla que tiene como objetivo ofrecer y mostrar una variedad de servicios profesionales como albañilería, pintura, aire acondicionado, fontanería, e instalación de placas solares.  
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/logo.png
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Documentación
+      link: /introduccion/introduccion
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
+import '../../styles/global.css';
 
-## Next steps
+
+## Realizado por:
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card class="custom-card" title="María Luna García-Arcicóllar Merino" icon="pencil">
+		Desarrollo de Aplicaciones Web
 	</Card>
 </CardGrid>
